Add title to html. Add padding to the body.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<title>Etch a sketch</title>
 	</head>
 	<body>
+		<h1 style="text-align: center; padding: 1.5em 0">Etch a sketch</h1>
 		<div class="container"></div>
 
 		<script src="main.js"></script>
