--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	</head>
 	<body>
 		<h1 style="text-align: center; padding: 1.5em 0">Etch a sketch</h1>
+		<div>
+			<input type="number" class="divs" />
+		</div>
 		<div class="container"></div>
 
 		<script src="main.js"></script>
