--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<h1 style="text-align: center; padding: 1.5em 0">Etch a sketch</h1>
 		<div>
 			<input type="number" class="divs" />
+			<button class="clear">Clear</button>
 		</div>
 		<div class="container"></div>
 
