Add controls class. Style .controls. Create gap between elements in body.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<h1 style="text-align: center; padding: 1.5em 0">Etch a sketch</h1>
-		<div>
+		<div class="controls">
 			<input type="number" class="divs" />
 			<button class="clear">Clear</button>
 		</div>
