--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<h1 style="text-align: center; padding: 1.5em 0">Etch a sketch</h1>
 		<div class="controls">
-			<input type="number" class="divs" />
+			<input type="number" value="2" min="2" max="50" class="divs" />
 			<button class="clear">Clear</button>
 		</div>
 		<div class="container"></div>
